- Graphical parameters are reset on.exit()

File: glk.R
-----------

- Large parts rewritten
- 'glk(ca533)' example in glk.Rd runs about 100 times faster

File: i.detrend.R
-----------------

- Parameter 'f' now has an explicit default value

File: i.detrend.series.R
------------------------

- Parameter 'f' now has an explicit default value

File: morlet.R
--------------

- Removed 'param' and made 'k0=6' an explicit default in morlet.func()
- seq(from=1, to=n) - 1 == seq(from=0, to=n-1)
- Cosmetic changes

File: series.rwl.plot.R
-----------------------

- Some extra steps are taken like in ccf.series.rwl.R
- Graphical parameters are reset on.exit()

File: write.tridas.R
--------------------

- Fixed a bug in the handling of parameter 'crn.units'

2011-07-01 Mikko Korpela
* CHANGES IN dplR VERSION 1.4.3
* Changes below by Mikko Korpela

Directory: po
-------------

- A new directory used for language translations
http://cran.r-project.org/doc/manuals/R-exts.html#Internationalization

Directory: inst/po
------------------

- Location for compiled translations

Directory: inst/po/fi and contents
---------------------

- Compiled Finnish translations

Various .R files:
-----------------

- Diagnostic and normal output messages were edited to facilitate
  translations. Messages consist of logical units (no small fragments, but
  sequences of sentences is possible), and gettext() and
  gettextf() are used. Also plot labels, titles and legends are ready for
  translation

File: po/R-dplR.pot
-------------------

- A translation template for messages in R code

File: po/dplR.pot
-------------------

- A translation template for messages in C code

File: po/R-fi.po
----------------

- Finnish translations of messages in R code

File: po/fi.po
--------------

- Finnish translations of messages in C code

File: src/dplR.h
----------------

- A new file that (initially) contains definitions used for looking up
  translations of messages appearing in C code
